# nrcs-backend

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose-prod.yaml  docker-compose.yaml  pyproject.toml  schema.graphql
.github/: gh-docker-compose.yaml
.github/workflows/: ci.yml  git.yml  publish-helm.yml
apps/blog/: admin.py  factories.py  models.py  serializers.py
apps/blog/graphql/: filters.py  inputs.py  mutations.py  orders.py  queries.py  types.py
apps/blog/migrations/: 0001_initial.py  0002_alter_blog_department_alter_blog_directive_and_more.py  0003_remove_blog_work.py
apps/blog/tests/: mutations_test.py  queries_test.py
apps/common/: admin.py  models.py  serializers.py
apps/common/graphql/: mutations.py  queries.py  types.py
apps/common/tests/: mutations_test.py
apps/department/: admin.py  factories.py  models.py  serializers.py
apps/department/graphql/: filters.py  inputs.py  mutations.py  orders.py  queries.py  types.py
apps/department/migrations/: 0001_initial.py  (+1 more)
apps/faq/: admin.py  factories.py  models.py  serializers.py
apps/home/: admin.py  factories.py  models.py  serializers.py
apps/news/: admin.py  factories.py  models.py  serializers.py
apps/partner/: admin.py  factories.py  models.py  serializers.py
apps/procurement/: admin.py  factories.py  models.py  serializers.py
apps/project/: admin.py  apps.py  factories.py  models.py  serializers.py
apps/radio_program/: admin.py  apps.py  factories.py  models.py  serializers.py
apps/resources/: admin.py  factories.py  models.py  serializers.py
apps/strategic/: admin.py  apps.py  factories.py  models.py  serializers.py
apps/users/: models.py  serializers.py
apps/vacancy/: admin.py  factories.py  models.py  serializers.py
apps/work/: admin.py  factories.py  models.py
deploy/: Caddyfile  run_prod.sh
helm/: .gitignore  .helmignore  Chart.yaml  linter_values.yaml  values.local.yaml  values.yaml
main/: sentry.py  settings.py  urls.py
main/graphql/: dataloaders.py  enums.py  permissions.py  schema.py
main/tests/: base_test.py
misc/: run_tests.sh
misc/dev/: run_web.sh
templates/admin/: deployments.html  index.html
utils/: common.py  fields.py
utils/graphql/: drf.py  mutations.py  types.py
(+129 files in other folders)
